# SRE-X

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: prompts.py  sre_agent.py  tools.py  triage.py
bot/: slack_bot.py
config/: settings.py
data/: sample_alerts.json  sample_logs.json  sample_metrics.json
scripts/: cli.py  download_logs.py  run_demo.py  simulate_incident.py  test_connection.py
tools/: data_sources.py  docker_tool.py  log_parser.py
